5.2 demo: prevent gallery text from overflowing

--- a/5/listings/client.css
+++ b/5/listings/client.css
@@ -63,6 +63,7 @@ h1 {
     float:left;
     cursor:pointer;
     line-height:1.4;
+    word-break: break-word;
 }
 
 .l55 .product {
